--- a/src/public/confirm_3ds.html
+++ b/src/public/confirm_3ds.html
@@ -9,6 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
@@ -28,6 +31,31 @@
         </div>
     </div>
     <main id="main" style="display: none">
+        <section class="header main-header">
+            <nav
+                class="navbar navbar-default navbar-light fixed-top navbar-fixed-top navbar-expand flex-column flex-md-row">
+                <div class="container">
+                    <div class="navbar-header pl-3 pr-3">
+                        <a class="navbar-brand" href="/" data-category="header" data-event="homepage">
+                            <img src="img/vgs-logo-demo.svg" alt="logo">
+                        </a>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <a class="github" href="https://github.com/verygoodsecurity/vgs-stripe-demo"><i
+                                        class="fab fa-github"></i> View on GitHub</a>
+                            </li>
+                            <li>
+                                <a class="btn-log-in" href="https://dashboard.verygoodsecurity.com/"
+                                    data-category="header" data-event="log in">Log In</a></li>
+                            <li class="active">
+                                <a class="btn-get" href="https://dashboard.verygoodsecurity.com/" data-category="header"
+                                    data-event="sign up">Sign Up</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </section>
         <div class="container">
             <h2 class="mt-5 mb-2 text-center">VGS Collect.js and Stripe 3DS flow demo</h2>
             <section id="3ds-purchase-example" class="container py-lg-5 example-container">
