back to homepage link (#11)

--- a/src/public/confirm_3ds.html
+++ b/src/public/confirm_3ds.html
@@ -59,6 +59,9 @@
         <div class="container">
             <h2 class="mt-5 mb-2 text-center">VGS Collect.js and Stripe 3DS flow demo</h2>
             <section id="3ds-purchase-example" class="container py-lg-5 example-container">
+                <div class="mb-3">
+                    <a href="/"><i class="fas fa-chevron-left"></i> Back to homepage</a>
+                </div>
                 <!--Example Capturing credit card data-->
                 <div class="card">
                     <div class="card-body">
