update links and styles
Signed-off-by: Alexandr <alexandr.florinskiy@vgs.io>

--- a/src/public/with-modal.html
+++ b/src/public/with-modal.html
@@ -7,14 +7,17 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="https://www.verygoodsecurity.com/theme/css/main.css"/>
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <script src="https://verygoodsecurity.github.io/vgs-collect-examples/vendor/jquery-3.3.1.min.js"></script>
-    <script src="https://verygoodsecurity.github.io/vgs-collect-examples/vendor/bootstrap/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <script type="text/javascript" src="{{VGS_COLLECT_LIBRARY_URL}}"></script>
+    <script src="https://vgs-samples.github.io/vgs-collect-examples/vendor/jquery-3.3.1.min.js"></script>
+    <script src="https://vgs-samples.github.io/vgs-collect-examples/vendor/bootstrap/bootstrap.min.js"></script>
+    <script src="js/highlight.js"></script>
+    <script src="js/urlParams.js"></script>
 </head>
 
 <body>
