--- a/src/public/confirm_3ds.html
+++ b/src/public/confirm_3ds.html
@@ -9,17 +9,16 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
-    <script src="js/urlParams.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://www.verygoodsecurity.com/theme/css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-
+    <script type="text/javascript" src="{{VGS_COLLECT_LIBRARY_URL}}"></script>
+    <script src="https://vgs-samples.github.io/vgs-collect-examples/vendor/jquery-3.3.1.min.js"></script>
+    <script src="https://vgs-samples.github.io/vgs-collect-examples/vendor/bootstrap/bootstrap.min.js"></script>
+    <script src="js/highlight.js"></script>
+    <script src="js/urlParams.js"></script>
 </head>
 
 <body>
