--- a/src/public/credit-card.html
+++ b/src/public/credit-card.html
@@ -13,21 +13,19 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="https://www.verygoodsecurity.com/theme/css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <script type="text/javascript" src="{{VGS_COLLECT_LIBRARY_URL}}"></script>
-    <script src="https://verygoodsecurity.github.io/vgs-collect-examples/vendor/jquery-3.3.1.min.js"></script>
-    <script src="https://verygoodsecurity.github.io/vgs-collect-examples/vendor/bootstrap/bootstrap.min.js"></script>
+    <script src="https://vgs-samples.github.io/vgs-collect-examples/vendor/jquery-3.3.1.min.js"></script>
+    <script src="https://vgs-samples.github.io/vgs-collect-examples/vendor/bootstrap/bootstrap.min.js"></script>
     <script src="js/highlight.js"></script>
-    <script src="js/urlParams.js"></script>
-
+    <script src="js/urlParams.js"></script> 
 </head>
 
 <body>
     <main>
         <section class="header main-header">
             <nav
-                class="navbar navbar-default navbar-light fixed-top navbar-fixed-top navbar-expand flex-column flex-md-row">
+                class="navbar navbar-default navbar-light navbar-expand flex-column flex-md-row">
                 <div class="container">
                     <div class="navbar-header pl-3 pr-3">
                         <a class="navbar-brand" href="/" data-category="header" data-event="homepage">
